TS-4420: Fix TSHttpTxnParentProxySet crash on parent failure.

Fix NULL pointer deref when marking API parents down. Since the API
parent caches are fixed, there's no place to store up/down status.
Add an API test to exercise API parent failure.

This closes #623.